--- a/content/manual/problems/arrow-of-time.mdx
+++ b/content/manual/problems/arrow-of-time.mdx
@@ -222,7 +222,7 @@ This is derived from the band-to-global limit of the spectral QNEC, with equalit
 
 ---
 
-## The Generalised Second Law — Unbroken and Unbanded
+## The Generalised Second Law - Unbroken and Unbanded
 
 The Generalised Second Law (GSL) states that the total entropy radiation entropy plus one-quarter the horizon area never decreases. Previous derivations required band decompositions with inter-band "ledger" terms that complicated the global statement. The Tier-0 framework proves a full, unbanded GSL using the quintic Fejér–Hardy comb:
 
