--- a/content/manual/problems/mathematical-foundations.mdx
+++ b/content/manual/problems/mathematical-foundations.mdx
@@ -263,14 +263,41 @@ The admissibility framework does not take sides in the traditional ontological d
 
 The unified reclassification:
 
-| Phenomenon | Operator diagnosis |
-|---|---|
-| Presentation dependence | $\partial_{\mathsf{M}}$-failure |
-| Independence / axiom sensitivity | $\Delta_{\mathsf{M}}$-failure |
-| Non-canonical / limit-unstable constructions | $\Omega_{\mathsf{M}}$-failure |
-| Canonical reappearance across domains | $\Omega_{\mathsf{M}}$-closure |
-| Robustness under foundational reformulation | High $\partial_{\mathsf{M}}$ and $\Delta_{\mathsf{M}}$ invariance |
-| Mathematics feeling "discovered" | Fixed points are forced by the recursion, not chosen |
+<table>
+  <thead>
+    <tr>
+      <th>Phenomenon</th>
+      <th>Operator diagnosis</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Presentation dependence</td>
+      <td>$\partial_{\mathsf{M}}$-failure</td>
+    </tr>
+    <tr>
+      <td>Independence / axiom sensitivity</td>
+      <td>$\Delta_{\mathsf{M}}$-failure</td>
+    </tr>
+    <tr>
+      <td>Non-canonical / limit-unstable constructions</td>
+      <td>$\Omega_{\mathsf{M}}$-failure</td>
+    </tr>
+    <tr>
+      <td>Canonical reappearance across domains</td>
+      <td>$\Omega_{\mathsf{M}}$-closure</td>
+    </tr>
+    <tr>
+      <td>Robustness under foundational reformulation</td>
+      <td>High $\partial_{\mathsf{M}}$ and $\Delta_{\mathsf{M}}$ invariance</td>
+    </tr>
+    <tr>
+      <td>Mathematics feeling "discovered"</td>
+      <td>Fixed points are forced by the recursion, not chosen</td>
+    </tr>
+  </tbody>
+</table>
+
 
 ---
 
